--- a/section3.tex
+++ b/section3.tex
@@ -2438,7 +2438,7 @@ Damit folgt gewünschte Schranke für Ausgabefehler:
 
 \subsection{Geometrieparametrisierung}
 
-\subsubsection{Motivation}
+\subsubsection*{Motivation}
 
 \begin{itemize}
 	\item Neben Koeffizientenfunktionen in elliptischen PDEs oder Randwerten können auch Geometrieparametrisierungen behandelt werden.
